# patientman

./: .gitignore  Cargo.toml  README.md  sdc_patientman.db
.fleet/: run.json
backend/: Cargo.toml
backend/src/: db.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend-relm/: Cargo.toml
frontend-relm/src/: main.rs
