# Copyright (C) 2022  Vardhan Patil
# This file is part of patientman.
#
# patientman is free software: you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# patientman is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with patientman.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
sqlite = { package = "rusqlite", version = "0.28.0", features = ["bundled"] }
common = {path = "../common"}
rocket = "0.5.0-rc.2"

